Tag: tags/2017-11-25-02
--------------------
- zd-143: Facebook OG Meta Tags for Show Content Type

Tag: tags/2017-11-25-01
--------------------
- Deleted bill-bash-test.txt test file

Tag: tags/2017-11-25
--------------------
- zd-142: Add Better Preview Display for Jumbotron Paragraphs

Tag: tags/2017-11-12-02
--------------------
- Updated and cleaned-up CMB Search features

Tag: tags/2017-11-12-01
--------------------
- re-tagging last release to trigger cmb deploy

Tag: tags/2017-11-12
--------------------
- Changed iframe video urls in project and partner TPLs to use SSL

Tag: tags/2017-10-09
--------------------
- zd-66: Blog Image Placement

Tag: tags/2017-10-03-01
--------------------
- zd-51: fix for cc_text_with_background css conflict with body background color

Tag: tags/2017-10-03
--------------------
- zd-51: Max Width Desired for CM Bootstrap Sites

Tag: tags/2017-09-27
--------------------
- zd-43: Images not displaying in Facebook
- zd-69: Content list description styling

Tag: tags/2017-09-23
--------------------
- Testing switch to firstturnmedia github org

Tag: tags/2017-09-10
--------------------
- zd-72: Homepage Jumbotron Data Loading

Tag: tags/2017-09-09-02
--------------------
- zd-48: Add blog Thumbnails to search results

Tag: tags/2017-09-09-01
--------------------
- zd-22: various updates to wire up field_show_custom_thumbnail (BCTV critical bug)

Tag: tags/2017-09-09
--------------------
- zd-64: HTTP ERROR 500 for a highly used series (SPNN critical bug)

Tag: tags/2017-08-06
--------------------
- zd-28: Add Global Config For Sorting Custom Video Lists by Production Date

Tag: tags/2017-07-30
--------------------
- p-188: ReUsing Jumbotron Items, added media browser to jumbotron item image

Tag: tags/2017-07-18
--------------------
- p-217: Webform Blocks Access to Node Edit

Tag: tags/2017-07-16-0
--------------------
- ch-205/p-162: Site Not Rendering Properly in Explorer 11

Tag: tags/2017-07-16
--------------------